fix jumping font-smoothing

--- a/src/components/clock/clock.styl
+++ b/src/components/clock/clock.styl
@@ -3,6 +3,7 @@
   text-align: center
 
   &__time // container for actual clock
+    transform: translate3d(0,0,0)
 
     & > *
       display: inline-block
