--- a/src/components/weather/weather.styl
+++ b/src/components/weather/weather.styl
@@ -34,6 +34,7 @@
       font-size: 18pt
       vertical-align: top
       margin-top: -15px
+      -webkit-backface-visibility: hidden
 
       &--high
       &--low
